# hac

./: .gitignore  .rustfmt.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  README.md  TODO.md  cliff.toml  flake.nix  rust-toolchain.toml  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: audit.yml  general.yml  release.yml  vhs.yml
cli/: Cargo.toml
colors/: Cargo.toml
colors/src/: colors.rs
config/: Cargo.toml
config/src/: config.rs  data.rs  default_config.rs  lib.rs
core/: Cargo.toml
core/src/: command.rs  httpretty.rs  main.rs  schema.rs  tui.rs
core/src/schema/: collections.rs  schema.rs  types.rs
core/src/tui/: components.rs  dashboard.rs  editor.rs  tui.rs
core/src/tui/components/: input.rs
extra/examples/: editor.tape  list.tape
extra/tapes/: create_request.tape  error_request.tape  preview.tape  run_all.sh
hac/: Cargo.toml
hac-cli/: Cargo.toml
hac-cli/src/: lib.rs
hac-client/: Cargo.toml
hac-client/benches/: collection_viewer_bench.rs
hac-client/src/: app.rs  ascii.rs  components.rs  event_pool.rs  icons.rs  lib.rs  main.rs  pages.rs  renderable.rs  router.rs  screen_manager.rs  utils.rs
hac-client/src/components/: blending_list.rs  component_styles.rs  input.rs  key_value_pair.rs  list_item.rs  list_itemm.rs  mod.rs  sample_response_list.rs
hac-client/src/pages/: confirm_popup.rs  error_popup.rs  input.rs  mod.rs  overlay.rs  spinner.rs  terminal_too_small.rs  under_construction.rs
hac-client/src/pages/collection_dashboard/: collection_dashboard.rs  collection_list.rs  new_collection_form.rs
hac-client/src/pages/collection_list/: collection_list.rs  create_collection.rs  delete_collection.rs  edit_collection.rs  form_shared.rs  mod.rs
hac-client/src/pages/collection_viewer/: collection_store.rs  collection_viewer.rs  mod.rs  req_editor.rs  req_uri.rs  request_editor.rs  request_uri.rs  response_viewer.rs  sidebar.rs
hac-client/src/pages/collection_viewer/request_editor/: auth_editor.rs  body_editor.rs  headers_editor.rs  headers_editor_delete_prompt.rs  headers_editor_edit_form.rs  headers_editor_form.rs
hac-client/src/pages/collection_viewer/sidebar/: create_directory_form.rs  create_request_form.rs  delete_item_form.rs  delete_item_prompt.rs  directory_form.rs  edit_directory_form.rs  edit_request_form.rs  mod.rs  request_form.rs  request_form_layout.rs  (+1 more)
hac-client/tests/: collection_dashboard.rs
hac-colors/: Cargo.toml
hac-colors/src/: colors.rs  lib.rs
hac-config/: Cargo.toml
hac-config/src/: config.rs  data.rs  default_config.rs  lib.rs
hac-core/: Cargo.toml
hac-core/src/: collection.rs  command.rs  lib.rs
hac-core/src/collection/: collection.rs  errors.rs  header_map.rs  mod.rs  types.rs
hac-core/src/fs/: fs.rs
hac-core/src/net/: mod.rs  request_client.rs  request_manager.rs  request_strategies.rs  response_decoders.rs
hac-core/src/net/request_strategies/: http_strategy.rs
hac-core/src/net/response_decoders/: json_decoder.rs
hac-core/src/syntax/: highlighter.rs  mod.rs
hac-core/src/syntax/queries/json/: highlights.scm
hac-core/src/text_object/: cursor.rs  mod.rs  text_object.rs
hac-loader/: Cargo.toml
hac-loader/src/: lib.rs
hac-loader/src/collection_loader/: error.rs  json_collection.rs  json_loader.rs  mod.rs
hac-loader/test_collections/: basic.json  complex.json
hac-store/: Cargo.toml
hac-store/src/: collection.rs  collection_meta.rs  lib.rs  slab.rs
hac-tui/: Cargo.toml
hac-tui/benches/: collection_viewer_bench.rs
hac-tui/src/: app.rs  main.rs  pages.rs  screen_manager.rs  utils.rs
hac-tui/src/pages/: overlay.rs  terminal_too_small.rs
hac-tui/src/pages/collection_dashboard/: mod.rs  new_collection_form.rs
hac-tui/src/pages/collection_viewer/: collection_viewer.rs  req_uri.rs  res_viewer.rs  sidebar.rs
hac-tui/tests/: collection_dashboard.rs
hac/src/collection/: collection.rs
hac/src/fs/: error.rs  fs.rs
hac/src/net/: request_manager.rs  request_strategies.rs
httpretty/: Cargo.toml
httpretty/src/: action.rs  command.rs  fs.rs  lib.rs  net.rs  schema.rs
httpretty/src/fs/: error.rs  fs.rs
httpretty/src/schema/: schema.rs  types.rs
reqtui/: Cargo.toml
reqtui/src/: command.rs  lib.rs  net.rs  schema.rs  text_object.rs
reqtui/src/collection/: collection.rs  errors.rs  types.rs
reqtui/src/fs/: fs.rs
reqtui/src/net/: request_manager.rs  request_strategies.rs  response_decoders.rs
reqtui/src/net/request_strategies/: http_strategy.rs
reqtui/src/net/response_decoders/: json_decoder.rs
reqtui/src/schema/: errors.rs  schema.rs  types.rs
reqtui/src/syntax/: highlighter.rs
reqtui/src/text_object/: cursor.rs  text_object.rs
src/: event_handler.rs  event_pool.rs  httpretty.rs  main.rs  tui.rs
src/tui/: components.rs  editor.rs  mod.rs  tui.rs
src/tui/components/: input.rs
tui/: Cargo.toml
tui/benches/: api_explorer.rs  collection_viewer_bench.rs
tui/src/: app.rs  ascii.rs  components.rs  event_pool.rs  lib.rs  main.rs  pages.rs  screen_manager.rs  screens.rs  tui.rs  utils.rs
tui/src/components/: confirm_popup.rs  dashboard.rs  error_popup.rs  input.rs  overlay.rs  sidebar.rs  terminal_too_small.rs
tui/src/components/api_explorer/: api_explorer.rs  layout.rs  mod.rs  req_builder.rs  req_editor.rs  req_uri.rs  res_viewer.rs  sidebar.rs
tui/src/components/dashboard/: collection_list.rs  dashboard.rs  mod.rs  new_collection_form.rs  schema_list.rs
tui/src/pages/: input.rs  overlay.rs  spinner.rs  terminal_too_small.rs
tui/src/pages/collection_dashboard/: collection_dashboard.rs  collection_list.rs  new_collection_form.rs
tui/src/pages/collection_viewer/: collection_viewer.rs  mod.rs  req_editor.rs  req_uri.rs  res_viewer.rs  sidebar.rs
tui/src/screens/: dashboard.rs  editor.rs  mod.rs
tui/src/screens/api_explorer/: api_explorer.rs  req_builder.rs
tui/src/screens/editor/: editor.rs  layout.rs  mod.rs  request_builder.rs  sidebar.rs
tui/tests/: collection_dashboard.rs  dashboard.rs
(+7 files in other folders)
