[workspace]
members = ["config", "reqtui", "tui", "colors"]
default-members = ["tui"]
resolver = "2"

[workspace.dependencies]
config = { path = "config" }
reqtui = { path = "reqtui" }
colors = { path = "colors" }

anyhow = "1.0.81"
crossterm = { version = "0.27.0", features = ["event-stream"] }
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
reqwest = { version = "0.12", features = ["json"] }
ratatui = { version = "0.26.1", features = ["all-widgets", "crossterm"] }
