[workspace]
members = ["hac-config", "hac-core", "hac-client", "hac-colors", "hac-cli"]
default-members = ["hac-client"]
resolver = "2"

[workspace.metadata.crane]
name = "hac"

[workspace.package]
version = "0.2.0"

[workspace.dependencies]
hac-config = { path = "hac-config" }
hac-core = { path = "hac-core" }
hac-colors = { path = "hac-colors" }
hac-cli = { path = "hac-cli" }

anyhow = "1.0.81"
crossterm = { version = "0.27.0", features = ["event-stream"] }
tokio = { version = "1.39.2", features = ["rt", "rt-multi-thread", "macros", "fs"] }
tracing = "0.1.40"
serde = { version = "1.0.208", features = ["derive", "rc"] }
serde_json = "1.0.124"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }
ratatui = { version = "0.26.3", features = ["all-widgets", "crossterm"] }
tree-sitter = "0.22.6"
tree-sitter-json = "0.21"
divan = "0.1.14"
lazy_static = "1.5"
