[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
config.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true

crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.30"
ratatui = { version = "0.26.1", features = ["all-widgets", "crossterm"] }
tokio = { version = "1.37.0", features = ["full"] }
