[package]
name = "hac-core"
version = "0.2.0"
edition = "2021"
description = "your handy API client, on your terminal!"
repository = "https://github.com/wllfaria/hac"
homepage = "https://github.com/wllfaria/hac"
documentation = "https://github.com/wllfaria/hac/wiki"
authors = ["Willians Faria <dev.willians.faria@gmail.com>"]
license = "MIT"
readme = "../README.md"
keywords = ["api", "api-client", "insomnia", "postman"]
categories = ["command-line-utilities"]
workspace = "../"

[dependencies]
hac-config.workspace = true
hac-store.workspace = true

anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde_json.workspace = true
ratatui.workspace = true
tree-sitter.workspace = true
tree-sitter-json.workspace = true
lazy_static.workspace = true

ropey = "1.6.1"
jsonxf = "1.1.1"
