[package]
name = "reqtui"
version = "0.1.0"
edition = "2021"

[dependencies]
config.workspace = true
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde_json.workspace = true
ratatui.workspace = true

tree-sitter = "0.22.5"
tree-sitter-json = "0.21"
ropey = "1.6.1"
lazy_static = "1.4"

[build-dependencies]
cc="*"
