[package]
name = "tui"
version = "0.1.0"
edition = "2021"

[dependencies]
httpretty.workspace = true
config.workspace = true
colors.workspace = true

anyhow.workspace = true
crossterm.workspace = true
tokio.workspace = true
tracing.workspace = true
reqwest.workspace = true
serde_json.workspace = true

futures = "0.3.30"
ratatui = { version = "0.26.1", features = ["all-widgets", "crossterm"] }
tui-big-text = { version = "0.4.3" }
tracing-subscriber = { version = "0.3.18" }
tracing-appender = "0.2.3"

[dev-dependencies]
tempfile = "3.10.1"

[[bin]]
name = "rqt"
test = false
bench = false
path = "src/main.rs"
