[package]
name = "tui"
version = "0.1.0"
edition = "2021"

[dependencies]
hac.workspace = true
config.workspace = true
colors.workspace = true
cli.workspace = true

anyhow.workspace = true
crossterm.workspace = true
tokio.workspace = true
tracing.workspace = true
reqwest.workspace = true
serde_json.workspace = true
ratatui.workspace = true
tree-sitter.workspace = true
divan.workspace = true
lazy_static.workspace = true

futures = "0.3.30"
tui-big-text = { version = "0.4.3" }
tracing-subscriber = { version = "0.3.18" }
tracing-appender = "0.2.3"
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
rand = "0.8.5"

[dev-dependencies]
tempfile = "3.10.1"
mutants = "0.0.3"

[[bin]]
name = "hac"
test = false
bench = false
path = "src/main.rs"

[[bench]]
name = "collection_viewer_bench"
harness = false
